# av-perception-portfolio

./: .gitattributes  .gitignore  PROJECT_PLAN.md  README.md  pyproject.toml  requirements.txt
results/bev_tracking_baseline/: metrics.csv  metrics.json  metrics.md
results/bev_tracking_baseline/sequence_npz/: frame_0000.npz  frame_0001.npz  frame_0002.npz  frame_0003.npz  frame_0004.npz  frame_0005.npz  frame_0006.npz  frame_0007.npz  frame_0008.npz  frame_0009.npz  frame_0010.npz  frame_0011.npz  frame_0012.npz  frame_0013.npz  frame_0014.npz  frame_0015.npz  frame_0016.npz  frame_0017.npz  frame_0018.npz  frame_0019.npz  frame_0020.npz  frame_0021.npz  frame_0022.npz  frame_0023.npz  frame_0024.npz  frame_0025.npz  frame_0026.npz  frame_0027.npz  frame_0028.npz  frame_0029.npz  frame_0030.npz  frame_0031.npz  frame_0032.npz  frame_0033.npz  frame_0034.npz  frame_0035.npz  frame_0036.npz  frame_0037.npz  frame_0038.npz  frame_0039.npz  (+40 more)
results/calibration_lab_baseline/: metrics.csv  metrics.json  metrics.md
scripts/: run_bev_tracking_demo.py  run_calibration_lab.py
src/av_perception/: __init__.py  calibration.py  detector.py  geometry.py  metrics.py  synthetic.py  tracker.py  visualize.py
tests/: test_bev_pipeline.py  test_calibration_lab.py
