[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "av-perception-portfolio"
version = "0.1.0"
description = "Autonomous vehicle perception projects for BEV detection, tracking, occupancy, calibration, and evaluation."
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pillow>=10.0",
  "scipy>=1.10",
]

[tool.setuptools.packages.find]
where = ["src"]
